--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "devDependencies": {
     "mocha": "*",
     "middler": "~0.6.1",
-    "request": "~2.21.0"
+    "request": "~2.21.0",
+    "rimraf": "~2.2.0",
+    "idgen": "~1.3.0",
+    "ncp": "~0.4.2"
   },
   "scripts": {
     "test": "make test"
