--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dish": "^1.0.3",
     "graceful-fs": "^2.0.3",
     "handlebars": "^2.0.0-alpha.4",
-    "saw": "^1.0.4"
+    "dollop": "git+https://gist.github.com/30be6b580efaf8d74074.git"
   },
   "devDependencies": {
     "mocha": "*",
