--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "dish": "^1.0.3",
-    "graceful-fs": "^2.0.3",
-    "handlebars": "^2.0.0-alpha.4",
-    "dollop": "git+https://gist.github.com/30be6b580efaf8d74074.git"
+    "dollop": "git+https://gist.github.com/30be6b580efaf8d74074.git",
+    "handlebars": "^2.0.0-alpha.4"
   },
   "devDependencies": {
     "mocha": "*",
