--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "yet another lightweight templating thing",
   "main": "index.js",
   "dependencies": {
-    "dish": "^1.0.3",
-    "mayonnaise": "^0.3.1",
-    "handlebars": "^2.0.0-alpha.4"
+    "dish": "^1.0.7",
+    "handlebars": "^4.0.5",
+    "mayonnaise": "^0.3.3"
   },
   "devDependencies": {
-    "mocha": "*",
-    "middler": "~0.6.1",
-    "request": "~2.21.0",
-    "rimraf": "~2.2.0",
-    "idgen": "~1.3.0",
-    "ncp": "~0.4.2"
+    "idgen": "^2.0.2",
+    "middler": "^0.8.2",
+    "mocha": "^2.4.5",
+    "ncp": "^2.0.0",
+    "request": "^2.72.0",
+    "rimraf": "^2.5.2"
   },
   "scripts": {
     "test": "./node_modules/.bin/mocha --reporter spec --bail --timeout 10s"
